--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.12.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
