--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.7",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
